--- a/assets/color.css
+++ b/assets/color.css
@@ -24,7 +24,7 @@ body{
 }
 
 .text-gradient{
-    background: linear-gradient(114.44deg, #905DFF 0%, #FF70FD 100%);
+   background: linear-gradient(91.22deg, #A568EF 16%, #FF9191 103.7%);
     background-clip: text;
     -webkit-text-fill-color: transparent;
 }
