--- a/assets/index.scss
+++ b/assets/index.scss
@@ -93,6 +93,7 @@
       left: 10%;
       width: 80%;
       margin-top: 56px;
+      font-size: 16px;
     }
   }
 }
@@ -449,6 +450,9 @@
       line-height: 32px;
       letter-spacing: 0.75px;
       color: #000000;
+      @media only screen and (max-width: 768px) {
+      font-size: 14px;
+      }
       .work-text-lg {
         display: block;
         @media only screen and (max-width: 768px) {
@@ -476,8 +480,11 @@
     }
     .work-content-right {
       padding: 34px 0;
+      padding-top: 0;
+      margin-top:-20px;
       @media only screen and (max-width: 768px) {
         width: 100%;
+        margin-top:0;
       }
     }
     .work-content-right img {
