--- a/assets/index.scss
+++ b/assets/index.scss
@@ -486,6 +486,14 @@
         width: 100%;
         margin-top:0;
       }
+      .lottie{
+        width: 481px;
+        margin-top: -100px;
+        @media only screen and (max-width: 768px) {
+          width: 100%;
+          margin-top: 0;
+        }
+      }
     }
     .work-content-right img {
       max-width: 100%;
